# lzs

./: .cargo-rdme.toml  Cargo.toml  LICENSE  README.md  check.sh
.github/workflows/: ci.yml
lzs/: Cargo.toml  ChangeLog.md
lzs-cli/: Cargo.toml  ChangeLog.md  README.md
lzs-cli/src/: main.rs
lzs/benches/: benchmark.rs
lzs/src/: error.rs  io_simple.rs  lib.rs  macros.rs  slice.rs  slice_safe.rs  vec.rs  void.rs
lzs/src/dynamic/: compress.rs  decompress.rs  mod.rs
lzs/tests/: common.rs  dynamic.rs
lzss/: Cargo.toml  build.rs
lzss/benches/: benchmark.rs
lzss/src/: io_simple.rs  lib.rs
lzss/src/dynamic/: mod.rs
lzss/src/generic/: compress_in_place.rs  mod.rs
lzss/tests/: dynamic.rs  generic.rs  generic_in_place.rs
