[package]
name = "lzs"
version = "0.1.0"
authors = ["ALeX Kazik <alex@kazik.de>", "Jérôme Arzel <myst6re@gmail.com>"]
edition = "2021"
description = "A LZSS (early implementation) en-/decompressor (lossless data compression, no_std capable, in pure Rust)"
repository = "https://github.com/myst6re/lzs"
license = "MIT"
keywords = ["lzss", "lzs", "compression", "no_std"]
categories = ["compression", "no-std"]
rust-version = "1.64.0"

[dependencies]
void = { version = "1.0.2", default-features = false }

[features]
default = ['std', 'safe']
alloc = []
safe = []
std = ['void/std', 'alloc']

[package.metadata.docs.rs]
all-features = true
# enable unstable features in the documentation
rustdoc-args = ["--cfg", "docsrs"]

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "benchmark"
harness = false
